--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -10,6 +10,5 @@
       - if current_user
         %li.non-mobile Hej, #{link_to current_user.username, current_user.link, :target => "_blank"}
       %li= link_to "Score", tracks_path
-      - if Time.now < @competition.end_date
+      - if Time.now < @competition.end_date && Time.now > @competition.start_date
         %li= link_to "Submit", submit_path
-
