--- a/app/views/competitions/show.html.haml
+++ b/app/views/competitions/show.html.haml
@@ -6,7 +6,7 @@
       = markdown @competition.intro
       %p
         = link_to "Get Stems", @competition.download, :class => "button" if !@competition.download.blank?
-        - if Time.now < @competition.end_date
+        - if Time.now < @competition.end_date && Time.now > @competition.start_date
           = link_to "Submit", submit_path, :class => "button"
           = link_to "Score", tracks_path, :class => "button"
 
